# Liquid-OS

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
liquid_os/: __init__.py  _client_prompt.py  _parts_manager.py  _schema.py  agent.py  format_as_xml.py  messages.py  result.py  serve.py  tools.py  usage.py
liquid_os-0.0.19.dist-info/: METADATA  RECORD
liquid_os/models/: __init__.py  anthropic.py  function.py  groq.py  mistral.py  ollama.py  openai.py  vertexai.py
liquid_os_slim-0.0.19.dist-info/: METADATA  RECORD
